objects/SCQuickSetup__chat_auto_setup__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>names of objects for auto create</description>
    <fields>
        <fullName>SCQuickSetup__button__c</fullName>
        <defaultValue>&quot;Live Agent Button&quot;</defaultValue>
        <label>button</label>
        <length>32</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SCQuickSetup__deployment__c</fullName>
        <defaultValue>&quot;Live Agent Deployment&quot;</defaultValue>
        <label>deployment</label>
        <length>32</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SCQuickSetup__liveAgentConfig__c</fullName>
        <label>liveAgentConfig</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SCQuickSetup__permission_set__c</fullName>
        <defaultValue>&quot;Live Agent Permission&quot;</defaultValue>
        <label>permission_set</label>
        <length>32</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SCQuickSetup__queue__c</fullName>
        <defaultValue>&quot;Live Agent Queue&quot;</defaultValue>
        <label>queue</label>
        <length>32</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SCQuickSetup__routing_config__c</fullName>
        <defaultValue>&quot;Live Agent Route&quot;</defaultValue>
        <label>routing_config</label>
        <length>32</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SCQuickSetup__service_presence__c</fullName>
        <defaultValue>&quot;Live Agent Online&quot;</defaultValue>
        <label>service_presence</label>
        <length>32</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SCQuickSetup__skill__c</fullName>
        <defaultValue>&quot;Skill&quot;</defaultValue>
        <label>skill</label>
        <length>32</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>chat_auto_setup</label>
</CustomObject>